envoy/envoy-2.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_service
            virtual_hosts:
            - name: minio_service
              domains:
              # - "*"
              - "oss.ucloud.cn"
              routes:
              - name: minio_upstream
                match:
                  prefix: "/"
                route:
                  # cluster: provider_minio_upstream
                  cluster: provider_minio_test_upstream
            - name: db_service
              domains:
              - "db.ucloud.cn"
              routes:
              - name: db_upstream
                match:
                  prefix: "/"
                route:
                  cluster: provider_db_upstream
          http_filters:
          - name: envoy.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.ext_authz.v2.ExtAuthz
              with_request_body:
                max_request_bytes: 8192
                allow_partial_message: true
              failure_mode_allow: false

              grpc_service:
                envoy_grpc:
                  cluster_name: ext-authz

                # Default is 200ms; override if your server needs e.g. warmup time.
                timeout: 0.5s
          - name: envoy.router
            config: {}

          # http_filters:
          # - name: envoy.ext_authz
          #   config:
          #     #stat_prefix: ext_authz
          #     grpc_service:
          #       envoy_grpc:
          #         cluster_name: ext-authz
          # - name: envoy.router
          #   config: {}

  clusters:
  - name: test_upstream
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 106.75.140.11
        port_value: 4001

  - name: data_plane_upstream
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 120.132.27.75
        port_value: 30008

  - name: provider_minio_mock_upstream
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 192.168.190.140
        port_value: 63901

  - name: provider_minio_test_upstream
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 120.132.27.75
        port_value: 4001

  - name: provider_db_upstream
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 192.168.190.140
        port_value: 8080

  - name: ext-authz
    type: static
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ext-authz
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 192.168.190.140
                port_value: 16092
      # This timeout controls the initial TCP handshake timeout - not the timeout for the
      # entire request.
    connect_timeout: 0.25s
